--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "symfony/console": "3.3.*",
         "symfony/yaml": "3.3.*",
         "akeneo/api-php-client": "1.0.0-beta1",
-        "php-http/guzzle6-adapter": "1.1.*"
+        "php-http/guzzle6-adapter": "1.1.*",
+        "fzaninotto/faker": "1.7.1"
     },
     "require-dev": {
         "php": "^7.1"
