--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "require": {
         "symfony/console": "3.3.*",
         "symfony/yaml": "3.3.*",
-        "akeneo/api-php-client": "1.0.0-beta1",
+        "akeneo/api-php-client": "dev-master",
         "php-http/guzzle6-adapter": "1.1.*",
         "fzaninotto/faker": "1.7.1"
     },
