--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": "^7.1",
     "symfony/console": "3.3.*",
     "symfony/yaml": "3.3.*",
-    "akeneo/api-php-client": "dev-master",
+    "akeneo/api-php-client": "1.0.0-beta2",
     "php-http/guzzle6-adapter": "1.1.*",
     "fzaninotto/faker": "1.7.1"
   },
