--- a/app/parameters.yml.dist
+++ b/app/parameters.yml.dist
@@ -1,6 +1,5 @@
 config:
-    host: 192.168.7.175
-    port: 8080
+    base_uri: http://demo.akeneo.com:80
     client_id: myClient
     secret: mySecret
     username: admin
