--- a/app/catalog/test.yml
+++ b/app/catalog/test.yml
@@ -1,5 +1,14 @@
 catalog:
     entities:
+        channels:
+            -
+                code: ecommerce_two
+                locales:
+                    - fr_FR
+                    - en_US
+                currencies:
+                    - USD
+                    - EUR
         category-trees:
             -
                 code: master
