Add medium and large catalogs

--- a/app/catalog/test.yml
+++ b/app/catalog/test.yml
@@ -11,7 +11,7 @@ catalog:
                     - EUR
         category-trees:
             -
-                code: master
+                code: suppliers
                 children: 25
                 levels: 3
             -
