Add attribute group generation command

--- a/app/catalog/large.yml
+++ b/app/catalog/large.yml
@@ -28,6 +28,8 @@ catalog:
                 code: technical
                 children: 1000
                 levels: 4
+        attribute-groups:
+            count: 20
         attributes:
             count: 1000
         families:
