--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nidup/akeneo-data-generator",
+  "name": "akeneo/akeneo-data-generator",
   "description": "Akeneo PIM data generator using the Web API",
   "license": "OSL-3.0",
   "authors": [
@@ -12,7 +12,7 @@
     "php": "^7.1",
     "symfony/console": "3.3.*",
     "symfony/yaml": "3.3.*",
-    "akeneo/api-php-client": "1.0.0-beta2",
+    "akeneo/api-php-client": "1.0.*",
     "php-http/guzzle6-adapter": "1.1.*",
     "fzaninotto/faker": "1.7.1"
   },
