--- a/app/catalog/medium.yml
+++ b/app/catalog/medium.yml
@@ -24,6 +24,10 @@ catalog:
             count: 15
         attributes:
             count: 400
+            percentage_of_localizable: 5
+            percentage_of_scopable: 2
+            percentage_of_localizable_and_scopable: 1
+            percentage_of_useable_in_grid: 100
         families:
             count: 50
             attributes_count: 100
